cabal-version:      2.4
name:               time-domain
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Manuel Bärenz
maintainer:         programming@manuelbaerenz.de
description:        A library for time domains and durations
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Data.TimeDomain
  build-depends:
      base >= 4.13.0 && <= 4.17
    , time >= 1.9
  hs-source-dirs:   src
  default-language: Haskell2010
